# quant-factorizer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-app.yml
fixture/: workflow.toml
quant_factorizer/cli/: cli_tool.py  types.py
quant_factorizer/data/: base.py  loaders.py  writers.py
quant_factorizer/evaluation/: evaluators.py
quant_factorizer/factor/: crosses.py  indicators.py
quant_factorizer/workflow/: config.py  run.py
tests/data/: test_loaders.py
tests/factor/: test_indicators.py
tests/workflow/: test_config.py  test_run.py
