[tool.poetry]
name = "quant-factorizer"
version = "0.1.0"
description = ""
authors = ["ericzhang <ericzhang.buaa@gmail.com>"]
readme = "README.md"
packages = [{include = "quant_factorizer"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.1.1"
pydantic = "^2.4.2"
arrow = "^1.3.0"
ta-lib = "^0.4.28"
click = "^8.1.7"
numpy = "^1.26.1"
tomli = "^2.0.1"
rich = "^13.6.0"
plotly = "^5.17.0"
scikit-learn = "^1.3.1"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
pytest = "^7.4.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qf = "quant_factorizer.cli.cli_tool:cli"
